update to work with ADT r17
follow bunch of lint hints